<?xml version="1.0"?>
<package>
  <name>roslint</name>
  <version>0.0.0</version>
  <description>The roslint package</description>

  <maintainer email="mikepurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/roslint</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-pylint</build_depend>
  <build_depend>python-cpplint</build_depend>
</package>
