<?xml version="1.0"?>
<package>
  <name>roslint</name>
  <version>0.0.0</version>
  <description>
    CMake lint commands for ROS packages.

    The lint commands perform static checking of Python or C++ source
    code for errors and standards compliance.
  </description>
  <license>BSD</license>
  <maintainer email="mikepurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <url type="website">http://ros.org/wiki/roslint</url>
  <url type="repository">https://github.com/ros/roslint.git</url>
  <url type="bugtracker">https://github.com/ros/roslint/issues</url>

  <!-- It would be nicer not to require catkin. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- These are build export dependencies, needed for packages that
       use roslint but, it does not require them, itself. -->
  <run_depend>python-pylint</run_depend>
  <!-- Comment out until python-cpplint resolves correctly, so the
       devel tests don't fail continually:
  <run_depend>python-cpplint</run_depend>
  -->

</package>
